First version. Using become()

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,11 +11,11 @@ akka {
 
   actor {
     debug {
-      receive = off
+      receive = on
       autoreceive = off
       lifecycle = off
       fsm = off
-      event-stream = off
+      event-stream = on
       unhandled = off
       router-misconfiguration = off
     }
